--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <ul>
-                <li><a href="#home">Home</a></li> <!---->
+                <li><a href="#home">Home</a></li> <!--asdff-->
                 <li><a href="#paintings">Paintings</a></li>
                 <li><a href="#contact">Sculptures</a></li>
                 <li><a href="#about">About</a></li>
