--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <li><a href="#paintings">Paintings</a></li>
                 <li><a href="#contact">Sculptures</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#dfsdf">fdsfsdfsdf</a></li>dfsdf
+                <li><a href="#dfsdf">fdsfsdfsdf</a></li> asdfghjasd
         </ul>
     </body>
 </html>
