Images are added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#paintings">Paintings</a></li>
-                <li><a href="#contact">Sculptures</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#dfsdf">fdsfsdfsdf</a></li> asdfghjasd
-        </ul>
+        <div id="container">
+            <!--Navbar-->
+            <div class="navbar">
+                <a href="#home">Home</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Paintings 
+                    <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                    <a href="#">Leonardo da Vinci</a>
+                    <a href="#">Vincent Van Gogh</a>
+                    <a href="#">Pablo Picasso</a>
+                    <a href="#">Salvador Dali</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Sculptures 
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Michelangelo</a>
+                        <a href="#">Donatello</a>
+                        <a href="#">Aguste Rodin</a>
+                        <a href="#">Henry Moore</a>
+                    </div>
+                </div> 
+                <a style="float:right" href="#about">About</a>
+                <a style="float:right" href="sign.html">Sign In</a>
+            </div>
+            <!--Navbar ending-->
+            <!--Pictures and Sculptures-->
+            <div id="entarance">
+                <h2>What is the purpose of this site?</h2>
+                <p>
+                    Hi! Welcome to paintings and sculptures shopping. In this website you will find <br>
+                    famous artists' paintings and sculptures for sale! Yes you didn't read that wrong. <br>
+                    Our artist crew will replicate famous art pieces just for you. <br>
+                </p>
+            <div>
+        </div>
     </body>
 </html>
