--- a/sign.html
+++ b/sign.html
@@ -1,2 +1,37 @@
-<!--sign in and login page-->
-<!--Formlar olacak-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Login-Register</title>
+  <meta charset="utf-8">
+</head>
+<body>
+
+<div class="jumbotron text-center">
+  <h1>Get Started</h1>
+</div>
+  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Login</h3>
+      <p>Username: <input type ="text" name="ad" ></p>
+      <p>Password:<input type="password" name="soyad" required></p>
+      <p>Remember me: <input type="checkbox" name="benihatirla"></p>
+      <input type="submit" value="Login">
+      <input type="submit" value="Forget Password">
+    </div>
+    <div class="col-sm-4 register">
+      <h3>Register</h3>
+        <p>Name:<input type="text" name="ad" required></p>
+        <p>Surname :<input type="text" name="soyad" required></p>
+        <p>Username: <input type ="text" name="ad" ></p>
+        <p>Password:<input type="password" name="soyad" required></p>
+        <p>E-Mail :<input type="email" name="email"></p>
+        <input type="submit" value="Register">
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
+
