--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+    <title>Paintings and Sculptures Shopping</title>
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -7,7 +8,7 @@
     <body>
             <!--Navbar-->
             <div class="navbar">
-                <a href="#home" onClick="window.reload();">Home</a>
+                <a href="index.html" onClick="window.reload();">Home</a>
                 <div class="dropdown">
                     <button class="dropbtn">Paintings 
                         <i class="fa fa-caret-down"></i>
