--- a/sign.html
+++ b/sign.html
@@ -3,7 +3,8 @@
   <head>
     <title>Login-Register</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/sign.js"></script>
     <meta charset="utf-8">
   </head>
   <body> 
@@ -43,23 +44,26 @@
         or if you have an account already you can login.
       </p>
     </div>
-       <div class="register">
+       <form class="register" method="POST">
         <h3>Register</h3>
           <p>Name: <input type="text" name="name" required></p>
           <p>Surname: <input type="text" name="surname" required></p>
           <p>Username: <input type ="text" name="username" ></p>
-          <p>Password: <input type="password" name="password" required></p>
-          <p>E-Mail: <input type="email" name="email"></p>
+          <p>E-Mail: <input type="email" name="email" id="E-mail" onkeyup="check_email()"></p>
+          <span id="verifyMessage" class="confirmMessage"></span>
+          <p>Password: <input type="password" name="password" id="password" required></p>
+          <p> Confirm Password:<input type="password" name="confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required></p>
+          <span id="confirmMessage" class="confirmMessage"></span>
           <input class="sendbtn" name="registerSubmit" type="submit" value="Register">
-      </div>
-      <div class="login">
+       </form>
+      <form class="login" method="POST">
           <h3>Login</h3>
           <p>Username: <input type ="text" name="name" ></p>
           <p>Password: <input type="password" name="surname" required></p>
           <p>Remember me: <input type="checkbox" name="rememberMe"></p>
           <input class="sendbtn" name="loginSubmit" type="submit" value="Login">
           <input class="sendbtn" name="ForgetPasswordSubmit" type="submit" value="Forget Password">
-        </div>
+      </form>
   </div>
 
 </body>
