--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             <!--Footer-->
             <div class="footer">
                 <p>If you enjoyed our website you can also visit our social media adresses.</p>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            
             </div>
     </body>
     <script src="js/index.js"></script>
