--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
             
             </div>
+            <!--Footer ending-->
     </body>
     <script src="js/index.js"></script>
 </html>
