--- a/sign.html
+++ b/sign.html
@@ -66,6 +66,17 @@
       </form>
   </div>
 
+    <!--Footer-->
+    <div class="footer">
+        <p>If you enjoyed our website you can also visit our social media adresses.</p>
+        
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+    
+    </div>
+    <!--Footer ending-->
+
 </body>
 </html>
 
