Working on same image fixing

--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="#">Leonardo da Vinci</a>
+                        <a href="leonardo-da-vinci.html">Leonardo da Vinci</a>
                         <a href="#">Vincent Van Gogh</a>
                         <a href="#">Pablo Picasso</a>
                         <a href="#">Salvador Dali</a>
