--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="profiles/leonardo-da-vinci.html">Leonardo da Vinci</a>
-                        <a href="#">Vincent Van Gogh</a>
-                        <a href="#">Pablo Picasso</a>
-                        <a href="#">Salvador Dali</a>
+                        <a href="profiles/vincent-van-gogh.html">Vincent Van Gogh</a>
+                        <a href="profiles/pablo-picasso.html">Pablo Picasso</a>
+                        <a href="profiles/salvador-dali.html">Salvador Dali</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -25,10 +25,10 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="#">Michelangelo</a>
-                        <a href="#">Donatello</a>
-                        <a href="#">Aguste Rodin</a>
-                        <a href="#">Henry Moore</a>
+                        <a href="profiles/michelangelo.html">Michelangelo</a>
+                        <a href="profiles/donatello.html">Donatello</a>
+                        <a href="profiles/aguste-rodin.html">Aguste Rodin</a>
+                        <a href="profiles/henry-moore.html">Henry Moore</a>
                     </div>
                 </div> 
                 <a style="float:right" href="#about">About</a>
