--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -15,9 +15,9 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="leonardo-da-vinci.html">Leonardo da Vinci</a>
-                        <a href="#">Vincent Van Gogh</a>
-                        <a href="#">Pablo Picasso</a>
-                        <a href="#">Salvador Dali</a>
+                        <a href="vincent-van-gogh.html">Vincent Van Gogh</a>
+                        <a href="pablo-picasso.html">Pablo Picasso</a>
+                        <a href="salvador-dali.html">Salvador Dali</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -25,10 +25,10 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="#">Michelangelo</a>
-                        <a href="#">Donatello</a>
-                        <a href="#">Aguste Rodin</a>
-                        <a href="#">Henry Moore</a>
+                        <a href="michelangelo.html">Michelangelo</a>
+                        <a href="donatello.html">Donatello</a>
+                        <a href="aguste-rodin.html">Aguste Rodin</a>
+                        <a href="henry-moore.html">Henry Moore</a>
                     </div>
                 </div> 
                 <a style="float:right" href="#about">About</a>
