Leo's profile is done but there are some css problems to fix

--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -46,9 +46,27 @@
                 <div class="artPieces">
                         <div class="gallery">
                             <img src='../img/paintings/leanardo-da-vinci/mona-lisa.png' width="300" height="200">
-                        <div class="desc">Eser: Mona Lisa<br>Artist: Leonardo Da Vinci
-                            <div class="price">Price: 5$</div>
-                            <a href="sign.html"><button class="buy">Buy</button></a>
+                        <div class="desc">Art Piece: Mona Lisa<br>Artist: Leonardo Da Vinci
+                            <div class="price">Price: 500$</div>
+                            <a href="../address.html"><button class="buy">Buy</button></a>
+                        </div>
+                        <div class="gallery">
+                            <img src='../img/paintings/leanardo-da-vinci/last-supper.jpg' width="300" height="200">
+                        <div class="desc">Art Piece: Last Supper<br>Artist: Leonardo Da Vinci
+                            <div class="price">Price: 100$</div>
+                            <a href="../address.html"><button class="buy">Buy</button></a>
+                        </div>
+                        <div class="gallery">
+                            <img src='../img/paintings/leanardo-da-vinci/lady-with-an-ermine.png' width="300" height="200">
+                        <div class="desc">Art Piece: Lady With an Ermine<br>Artist: Leonardo Da Vinci
+                            <div class="price">Price: 200$</div>
+                            <a href="../address.html"><button class="buy">Buy</button></a>
+                        </div>
+                        <div class="gallery">
+                            <img src='../img/paintings/leanardo-da-vinci/salvator-mundi.png' width="300" height="200">
+                        <div class="desc">Art Piece: Salvator Mundi<br>Artist: Leonardo Da Vinci
+                            <div class="price">Price: 95$</div>
+                            <a href="../address.html"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                 </div>
