Server side trials

--- a/sign.html
+++ b/sign.html
@@ -44,7 +44,7 @@
         or if you have an account already you can login.
       </p>
     </div>
-       <form class="register" method="POST">
+       <form class="register" action="register.php" method="POST">
         <h3>Register</h3>
           <p>Name: <input type="text" name="name" required></p>
           <p>Surname: <input type="text" name="surname" required></p>
@@ -56,7 +56,7 @@
           <span id="confirmMessage" class="confirmMessage"></span>
           <input class="sendbtn" name="registerSubmit" type="submit" value="Register">
        </form>
-      <form class="login" method="POST">
+      <form class="login" action="login.php" method="POST">
           <h3>Login</h3>
           <p>Username: <input type ="text" name="name" ></p>
           <p>Password: <input type="password" name="surname" required></p>
