Sculptures's profile done

--- a/profiles/auguste-rodin.html
+++ b/profiles/auguste-rodin.html
@@ -38,37 +38,37 @@
             
             <!--Profile start-->
             <div class="profile">
-                <h2>Donatello</h2>
+                <h2>Auguste Rodin</h2>
                 <div class="profilePicture">
-                    <img src="donatello.jpg" alt="" width="200px" height="200px">
+                    <img src="auguste_rodin.jpg" alt="" width="200px" height="200px">
                 </div> 
             </div>
             <div class="artPieces">
                     <div class="gallery">
-                        <img src='../img/sculptures/donatello/equestrian-statue-of-gattamelata.png' width="300" height="200">
-                        <div class="desc">Art Piece: Equestrian Statue of Gattamelata<br>Artist: Donatello
-                            <div class="price">Price: 200$</div>
+                        <img src='../img/sculptures/auguste-rodin/man-with-broken-nose.png' width="300" height="200">
+                        <div class="desc">Art Piece: Man with Broken Nose<br>Artist: Auguste Rodin
+                            <div class="price">Price: 100$</div>
                             <a href="../address.html"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
-                        <img src='../img/sculptures/donatello/john-the-evangelist.png' width="300" height="200">
-                        <div class="desc">Art Piece: John the Evangelist<br>Artist: Donatello
+                        <img src='../img/sculptures/auguste-rodin/the-burghers-of-calais.png' width="300" height="200">
+                        <div class="desc">Art Piece: Burghers of Calais<br>Artist: Auguste Rodin
                             <div class="price">Price: 120$</div>
                             <a href="../address.html"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
-                        <img src='../img/sculptures/donatello/saint-mark.png' width="300" height="200">
-                        <div class="desc">Art Piece: Saint Mark<br>Artist: Donatello
-                            <div class="price">Price: 110$</div>
+                        <img src='../img/sculptures/auguste-rodin/the-cathedral.png' width="300" height="200">
+                        <div class="desc">Art Piece: The Cathedral<br>Artist: Auguste Rodin
+                            <div class="price">Price: 200$</div>
                             <a href="../address.html"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
-                        <img src='../img/sculptures/donatello/zuccone.png' width="300" height="200">
-                        <div class="desc">Art Piece: Zuccone<br>Artist: Donatello
-                            <div class="price">Price: 540$</div>
+                        <img src='../img/sculptures/auguste-rodin/the-thinker.png' width="300" height="200">
+                        <div class="desc">Art Piece: The Thinker<br>Artist: Auguste Rodin
+                            <div class="price">Price: 300$</div>
                             <a href="../address.html"><button class="buy">Buy</button></a>
                         </div>
                     </div>
