--- a/sign.html
+++ b/sign.html
@@ -48,8 +48,8 @@
         <h3>Register</h3>
           <p>Name: <input type="text" name="name" required></p>
           <p>Surname: <input type="text" name="surname" required></p>
-          <p>Username: <input type ="text" name="username" ></p>
-          <p>E-Mail: <input type="email" name="email" id="E-mail" onkeyup="check_email()"></p>
+          <p>Username: <input type ="text" name="username" required></p>
+          <p>E-Mail: <input type="email" name="email" id="E-mail" onkeyup="check_email()" required></p>
           <span id="verifyMessage" class="confirmMessage"></span>
           <p>Password: <input type="password" name="password" id="password" required></p>
           <p> Confirm Password:<input type="password" name="confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required></p>
@@ -58,7 +58,7 @@
        </form>
       <form class="login" action="login.php" method="POST">
           <h3>Login</h3>
-          <p>Username: <input type ="text" name="name" ></p>
+          <p>Username: <input type ="text" name="name" required></p>
           <p>Password: <input type="password" name="surname" required></p>
           <p>Remember me: <input type="checkbox" name="rememberMe"></p>
           <input class="sendbtn" name="loginSubmit" type="submit" value="Login">
