payment.php is added

--- a/profiles/aguste-rodin.html
+++ b/profiles/aguste-rodin.html
@@ -48,28 +48,28 @@
                         <img src='../img/sculptures/auguste-rodin/man-with-broken-nose.png' width="300" height="200">
                         <div class="desc">Art Piece: Man with Broken Nose<br>Artist: Auguste Rodin
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/auguste-rodin/the-burghers-of-calais.png' width="300" height="200">
                         <div class="desc">Art Piece: Burghers of Calais<br>Artist: Auguste Rodin
                             <div class="price">Price: 120$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/auguste-rodin/the-cathedral.png' width="300" height="200">
                         <div class="desc">Art Piece: The Cathedral<br>Artist: Auguste Rodin
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/auguste-rodin/the-thinker.png' width="300" height="200">
                         <div class="desc">Art Piece: The Thinker<br>Artist: Auguste Rodin
                             <div class="price">Price: 300$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
