--- a/profiles/henry-moore.html
+++ b/profiles/henry-moore.html
@@ -48,28 +48,28 @@
                         <img src='../img/sculptures/henry-moore/nuclear-energy.png' width="300" height="200">
                         <div class="desc">Art Piece: Nuclear Energy<br>Artist: Henry Moore
                             <div class="price">Price: 300$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/henry-moore/seated-woman.png' width="300" height="200">
                         <div class="desc">Art Piece: Seated Woman<br>Artist: Henry Moore
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/henry-moore/three-standing-figures.png' width="300" height="200">
                         <div class="desc">Art Piece: Three Standing Figures<br>Artist: Henry Moore
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/henry-moore/two-piece-reclining-figure-points.png' width="300" height="200">
                         <div class="desc">Art Piece: Two Piece Reclining Fİgure Points<br>Artist: Henry Moore
                             <div class="price">Price: 500$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
