--- a/profiles/michelangelo.html
+++ b/profiles/michelangelo.html
@@ -48,28 +48,28 @@
                         <img src='../img/sculptures/michelangelo/david.png' width="300" height="200">
                         <div class="desc">Art Piece: David<br>Artist: Michelangelo
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/michelangelo/madonna-of-bruges.png' width="300" height="200">
                         <div class="desc">Art Piece: Madonna of Bruges<br>Artist: Michelangelo
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/michelangelo/moses.png' width="300" height="200">
                         <div class="desc">Art Piece: Moses<br>Artist: Michelangelo
                             <div class="price">Price: 400$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/michelangelo/pieta.png' width="300" height="200">
                         <div class="desc">Art Piece: Pieta<br>Artist: Michelangelo
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
