--- a/profiles/pablo-picasso.html
+++ b/profiles/pablo-picasso.html
@@ -48,28 +48,28 @@
                         <img src='../img/paintings/pablo-picasso/family-of-saltimbanques.jpg' width="300" height="200">
                         <div class="desc">Art Piece: Familiy of Saltimbanques<br>Artist: Pablo Picasso
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/pablo-picasso/portrait-of-gertrude-stein.png' width="300" height="200">
                         <div class="desc">Art Piece: Portrait of Gertrude Stein<br>Artist: Pablo Picasso
                             <div class="price">Price: 300$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/pablo-picasso/the-old-guitarist.png' width="300" height="200">
                         <div class="desc">Art Piece: The Old Guitarist<br>Artist: Pablo Picasso
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/pablo-picasso/the-weeping-woman.png' width="300" height="200">
                         <div class="desc">Art Piece: The Weeping Woman<br>Artist: Pablo Picasso
                             <div class="price">Price: 400$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
