--- a/profiles/salvador-dali.html
+++ b/profiles/salvador-dali.html
@@ -48,28 +48,28 @@
                         <img src='../img/paintings/salvador-dali/melting-watch.png' width="300" height="200">
                         <div class="desc">Art Piece: Melting Watch<br>Artist: Salvador Dali
                             <div class="price">Price: 300$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/salvador-dali/reflecting-elephants.png' width="300" height="200">
                         <div class="desc">Art Piece: Reflecting Elephants<br>Artist: Salvador Dali
                             <div class="price">Price: 250$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/salvador-dali/the-burning-giraffe.png' width="300" height="200">
                         <div class="desc">Art Piece: The Burning Giraffe<br>Artist: Salvador Dali
                             <div class="price">Price: 95$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/salvador-dali/the-persistence-of-memory.jpg' width="300" height="200">
                         <div class="desc">Art Piece: The Persistence of Memory<br>Artist: Salvador Dali
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
