--- a/profiles/vincent-van-gogh.html
+++ b/profiles/vincent-van-gogh.html
@@ -48,28 +48,28 @@
                         <img src='../img/paintings/vincent-van-gogh/cafe-terrace-at-night.png' width="300" height="200">
                         <div class="desc">Art Piece: Cafe Terrace at Night<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/vincent-van-gogh/self-portrait.png' width="300" height="200">
                         <div class="desc">Art Piece: Self Portrait<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 100$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/vincent-van-gogh/starry-night.png' width="300" height="200">
                         <div class="desc">Art Piece: Starry Night<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 350$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/paintings/vincent-van-gogh/wheatfield-with-crows.png' width="300" height="200">
                         <div class="desc">Art Piece: Wheatfield With Crows<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 110$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
