--- a/profiles/donatello.html
+++ b/profiles/donatello.html
@@ -48,28 +48,28 @@
                         <img src='../img/sculptures/donatello/equestrian-statue-of-gattamelata.png' width="300" height="200">
                         <div class="desc">Art Piece: Equestrian Statue of Gattamelata<br>Artist: Donatello
                             <div class="price">Price: 200$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/donatello/john-the-evangelist.png' width="300" height="200">
                         <div class="desc">Art Piece: John the Evangelist<br>Artist: Donatello
                             <div class="price">Price: 120$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/donatello/saint-mark.png' width="300" height="200">
                         <div class="desc">Art Piece: Saint Mark<br>Artist: Donatello
                             <div class="price">Price: 110$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/donatello/zuccone.png' width="300" height="200">
                         <div class="desc">Art Piece: Zuccone<br>Artist: Donatello
                             <div class="price">Price: 540$</div>
-                            <a href="../address.html"><button class="buy">Buy</button></a>
+                            <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
             </div>
