Php files figurations

--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -33,7 +33,7 @@
                     </div>
                 </div> 
                 <a style="float:right" href="#about">About</a>
-                <a style="float:right" href="sign.html">Sign In</a>
+                <a style="float:right" href="../sign.html">Sign In</a>
             </div>
             <!--Navbar ending-->
             
