--- a/sign.html
+++ b/sign.html
@@ -44,7 +44,7 @@
         or if you have an account already you can login.
       </p>
     </div>
-       <form class="register" action="register.php" method="POST">
+       <form class="register" action="php/register.php" method="POST">
         <h3>Register</h3>
           <p>Name: <input type="text" name="name" required></p>
           <p>Surname: <input type="text" name="surname" required></p>
@@ -56,10 +56,10 @@
           <span id="confirmMessage" class="confirmMessage"></span>
           <input class="sendbtn" name="registerSubmit" type="submit" value="Register">
        </form>
-      <form class="login" action="login.php" method="POST">
+      <form class="login" action="php/login.php" method="POST">
           <h3>Login</h3>
-          <p>Username: <input type ="text" name="name" required></p>
-          <p>Password: <input type="password" name="surname" required></p>
+          <p>Username: <input type ="text" name="username" required></p>
+          <p>Password: <input type="password" name="password" required></p>
           <p>Remember me: <input type="checkbox" name="rememberMe"></p>
           <input class="sendbtn" name="loginSubmit" type="submit" value="Login">
           <input class="sendbtn" name="ForgetPasswordSubmit" type="submit" value="Forget Password">
