--- a/sign.html
+++ b/sign.html
@@ -62,7 +62,10 @@
           <p>Password: <input type="password" name="password" required></p>
           <p>Remember me: <input type="checkbox" name="rememberMe"></p>
           <input class="sendbtn" name="loginSubmit" type="submit" value="Login">
-          <input class="sendbtn" name="ForgetPasswordSubmit" type="submit" value="Forget Password">
+          <input class="sendbtn" name="forgetPasswordSubmit" type="submit" value="Forget Password" 
+          onclick="showForgetPasswordArea()">
+          <p id="enterYourEmail" hidden>Enter your email <input type="email" name="emailForForgotPassword">
+          <br><input type="button" id="forgotPasswordEmailSubmit" class="sendbtn" value="Send"></p>
       </form>
   </div>
 
