Some file deletion

--- a/sign.html
+++ b/sign.html
@@ -65,7 +65,7 @@
           <input class="sendbtn" name="forgetPasswordSubmit" type="button" value="Forget Password" 
           onclick="showForgetPasswordArea()">
           <div id="hiddenDiv" hidden>
-                <form action="php/forgotpassword.php" method="POST">
+                <form action="php/login.php" method="POST">
                     <p id="enterYourEmail">Email: <input type="email" name="emailForForgotPassword" required> </p>
                     <p id="enterYourUsername">Username: <input type="text" name="usernameForForgotPassword" required> </p>
                     <p id="enterYourNewPassword">New Password: <input type="text" name="passwordForForgotPassword" required> </p>
