--- a/sign.html
+++ b/sign.html
@@ -68,7 +68,7 @@
                 <form action="php/login.php" method="POST">
                     <p id="enterYourEmail">Email: <input type="email" name="emailForForgotPassword" required> </p>
                     <p id="enterYourUsername">Username: <input type="text" name="usernameForForgotPassword" required> </p>
-                    <p id="enterYourNewPassword">New Password: <input type="text" name="passwordForForgotPassword" required> </p>
+                    <p id="enterYourNewPassword">New Password: <input type="password" name="passwordForForgotPassword" required> </p>
                     <br><input type="submit" name="forgotPasswordEmailSubmit" id="forgotPasswordEmailSubmit" class="sendbtn" value="Send"></p>
                 </form>
           </div>
